--- a/android/src/main/AndroidManifest.xml
+++ b/android/src/main/AndroidManifest.xml
@@ -92,7 +92,7 @@
         <receiver android:name="cn.jpush.android.service.AlarmReceiver" android:exported="false" />
         <!--(jpush|jmessage)_config_end-->
 
-        <service android:name="cn.jiguang.plugins.service.JCoreModuleService">
+        <service android:name="cn.jiguang.plugins.service.JCoreModuleService"  android:enabled="true" android:exported="false" android:process=":pushcore">
             <intent-filter>
                 <action android:name="cn.jiguang.user.service.action" />
             </intent-filter>
