--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "author"     : "wicked.tc130",
   "license"    : "ISC",
   "main"       : "index.js",
-  "version"    : "2.0.4",
+  "version"    : "2.0.5",
   "repository" : {
     "type": "git",
     "url": "https://github.com/kafudev/jcore-react-native"
@@ -19,7 +19,7 @@
     "lib",
     "android",
     "ios",
-    "JPush.podspec",
+    "JCore.podspec",
     "!android/build",
     "!ios/build",
     "!**/__tests__",
