--- a/android/build.gradle
+++ b/android/build.gradle
@@ -5,12 +5,15 @@ def safeExtGet(prop, fallback) {
 }
 
 android {
-  compileSdkVersion safeExtGet('compileSdkVersion', 28)
+  compileSdkVersion 29
+  buildToolsVersion "29.0.0"
+
   defaultConfig {
-    minSdkVersion safeExtGet('minSdkVersion', 21)
-    targetSdkVersion safeExtGet('targetSdkVersion', 28)
-    versionCode 1
-    versionName "1.0"
+      minSdkVersion 21
+      targetSdkVersion 29
+      versionCode 1
+      versionName "1.0"
+
   }
   sourceSets {
     main {
