--- a/android/src/main/AndroidManifest.xml
+++ b/android/src/main/AndroidManifest.xml
@@ -16,7 +16,6 @@
                 <category android:name="${applicationId}" />
             </intent-filter>
             <intent-filter>
-                <action android:name="android.intent.action.USER_PRESENT" />
                 <action android:name="android.net.conn.CONNECTIVITY_CHANGE" />
             </intent-filter>
             <intent-filter>
@@ -38,10 +37,21 @@
             </intent-filter>
         </service> -->
 
+        <!-- <service android:name="cn.jiguang.plugins.service.JCoreModuleService"
+            android:exported="true">
+            <intent-filter>
+                <action android:name="cn.jiguang.user.service.action" />
+            </intent-filter>
+        </service> -->
+
         <!--(jpush|jmessage)_config_start，jpush和jmessage公用的组件-->
         <!-- Required SDK 核心功能 -->
         <!-- 可配置android:process参数将PushService放在其他进程中 -->
-        <service android:name="cn.jpush.android.service.PushService" android:enabled="true" android:exported="false" android:process=":pushcore">
+        <service
+            android:name="cn.jpush.android.service.PushService"
+            android:enabled="true"
+            android:exported="false"
+            android:process=":pushcore">
             <intent-filter>
                 <action android:name="cn.jpush.android.intent.REGISTER" />
                 <action android:name="cn.jpush.android.intent.REPORT" />
@@ -52,31 +62,40 @@
 
         <!-- since 1.8.0 option 可选项。用于同一设备中不同应用的JPush服务相互拉起的功能。 -->
         <!-- 若不启用该功能可删除该组件，或把 enabled 设置成 false ；App 不会被其他 App 拉起，但会拉起其他的 App。 -->
-        <service android:name="cn.jpush.android.service.DaemonService" android:enabled="true" android:exported="true">
+        <service
+            android:name="cn.jpush.android.service.DaemonService"
+            android:enabled="true"
+            android:exported="true">
             <intent-filter>
                 <action android:name="cn.jpush.android.intent.DaemonService" />
 
-                <category android:name="${applicationId}" />
+                <category android:name="${JPUSH_PKGNAME}" />
             </intent-filter>
         </service>
         <!-- 可选，如果使用静态Activity方式拉起，该组件必须声明 -->
-        <activity android:name="cn.jpush.android.service.DActivity" android:enabled="true" android:exported="true" android:taskAffinity="jpush.custom" android:theme="@android:style/Theme.Translucent.NoTitleBar">
+        <activity
+            android:name="cn.jpush.android.service.DActivity"
+            android:enabled="true"
+            android:exported="true"
+            android:taskAffinity="jpush.custom"
+            android:theme="@android:style/Theme.Translucent.NoTitleBar">
             <intent-filter>
                 <action android:name="cn.jpush.android.intent.DActivity" />
 
-                <category android:name="${applicationId}" />
+                <category android:name="${JPUSH_PKGNAME}" />
             </intent-filter>
         </activity>
 
-
         <!-- Required SDK核心功能 -->
-        <receiver android:name="cn.jpush.android.service.PushReceiver" android:enabled="true">
+        <receiver
+            android:name="cn.jpush.android.service.PushReceiver"
+            android:enabled="true"
+            android:exported="false">
             <intent-filter android:priority="1000">
                 <action android:name="cn.jpush.android.intent.NOTIFICATION_RECEIVED_PROXY" /> <!-- Required  显示通知栏 -->
-                <category android:name="${applicationId}" />
+                <category android:name="${JPUSH_PKGNAME}" />
             </intent-filter>
             <intent-filter>
-                <action android:name="android.intent.action.USER_PRESENT" />
                 <action android:name="android.net.conn.CONNECTIVITY_CHANGE" />
             </intent-filter>
             <!-- Optional -->
@@ -89,7 +108,9 @@
         </receiver>
 
         <!-- Required SDK核心功能 -->
-        <receiver android:name="cn.jpush.android.service.AlarmReceiver" android:exported="false" />
+        <receiver
+            android:name="cn.jpush.android.service.AlarmReceiver"
+            android:exported="false" />
         <!--(jpush|jmessage)_config_end-->
 
         <service android:name="cn.jiguang.plugins.service.JCoreModuleService"  android:enabled="true" android:exported="false" android:process=":pushcore">
@@ -97,7 +118,7 @@
                 <action android:name="cn.jiguang.user.service.action" />
             </intent-filter>
         </service>
-
+        
     </application>
 
 </manifest>
