--- a/android/build.gradle
+++ b/android/build.gradle
@@ -5,16 +5,17 @@ def safeExtGet(prop, fallback) {
 }
 
 android {
-  compileSdkVersion 29
-  buildToolsVersion "29.0.0"
+  compileSdkVersion safeExtGet('jcore_compileSdkVersion', 29)
+  buildToolsVersion safeExtGet('jcore_buildToolsVersion', '29.0.2')
 
   defaultConfig {
-      minSdkVersion 21
-      targetSdkVersion 29
+      minSdkVersion safeExtGet('jcore_minSdkVersion', 21)
+      targetSdkVersion safeExtGet('jcore_targetSdkVersion', 29)
       versionCode 1
       versionName "1.0"
 
   }
+  
   sourceSets {
     main {
       jniLibs.srcDirs = ['libs']
