--- a/android/src/main/AndroidManifest.xml
+++ b/android/src/main/AndroidManifest.xml
@@ -111,6 +111,28 @@
         <receiver
             android:name="cn.jpush.android.service.AlarmReceiver"
             android:exported="false" />
+
+        <!-- since 3.5.0 Required SDK 核心功能 -->
+        <!-- 3.5.0新增，用于定时展示功能 -->
+        <!-- <receiver
+            android:name="cn.jpush.android.service.SchedulerReceiver"
+            android:exported="false" /> -->
+
+        <!-- 3.6.7 新增，用于负反馈组件 -->
+        <!-- <service android:name="cn.jpush.android.service.MessagingIntentService" /> -->
+
+        <!-- since 3.0.9 Required SDK 核心功能 -->
+        <provider
+            android:name="cn.jpush.android.service.DataProvider"
+            android:authorities="${JPUSH_PKGNAME}.DataProvider"
+            android:exported="false"
+            android:process=":pushcore" />
+        <!-- since 3.1.0 Required SDK 核心功能 -->
+        <provider
+            android:name="cn.jpush.android.service.DownloadProvider"
+            android:authorities="${JPUSH_PKGNAME}.DownloadProvider"
+            android:exported="true" />
+
         <!--(jpush|jmessage)_config_end-->
 
         <service android:name="cn.jiguang.plugins.service.JCoreModuleService"  android:enabled="true" android:exported="false" android:process=":pushcore">
@@ -118,6 +140,8 @@
                 <action android:name="cn.jiguang.user.service.action" />
             </intent-filter>
         </service>
+
+
         
     </application>
 
