--- a/android/build.gradle
+++ b/android/build.gradle
@@ -5,17 +5,14 @@ def safeExtGet(prop, fallback) {
 }
 
 android {
-  compileSdkVersion safeExtGet('jcore_compileSdkVersion', 29)
-  buildToolsVersion safeExtGet('jcore_buildToolsVersion', '29.0.2')
-
+  compileSdkVersion safeExtGet('compileSdkVersion', 29)
+  compileSdkVersion safeExtGet('buildToolsVersion', '29.0.2')
   defaultConfig {
-      minSdkVersion safeExtGet('jcore_minSdkVersion', 21)
-      targetSdkVersion safeExtGet('jcore_targetSdkVersion', 29)
-      versionCode 1
-      versionName "1.0"
-
+    minSdkVersion safeExtGet('minSdkVersion', 21)
+    targetSdkVersion safeExtGet('targetSdkVersion', 29)
+    versionCode 1
+    versionName "1.0"
   }
-  
   sourceSets {
     main {
       jniLibs.srcDirs = ['libs']
