--- a/android/.settings/org.eclipse.buildship.core.prefs
+++ b/android/.settings/org.eclipse.buildship.core.prefs
@@ -1,11 +1,11 @@
-arguments=
+arguments=--init-script C\:\\Users\\Administrator\\AppData\\Roaming\\Code\\User\\globalStorage\\redhat.java\\1.12.2022100604\\config_win\\org.eclipse.osgi\\53\\0\\.cp\\gradle\\init\\init.gradle --init-script C\:\\Users\\Administrator\\AppData\\Roaming\\Code\\User\\globalStorage\\redhat.java\\1.12.2022100604\\config_win\\org.eclipse.osgi\\53\\0\\.cp\\gradle\\protobuf\\init.gradle
 auto.sync=false
 build.scans.enabled=false
-connection.gradle.distribution=GRADLE_DISTRIBUTION(VERSION(6.8))
+connection.gradle.distribution=GRADLE_DISTRIBUTION(VERSION(7.4.2))
 connection.project.dir=
 eclipse.preferences.version=1
-gradle.user.home=
-java.home=C\:/Program Files/AdoptOpenJDK/jdk-11.0.8.10-hotspot
+gradle.user.home=F\:/.gradle
+java.home=C\:/Program Files/Java/jdk-11.0.2
 jvm.arguments=
 offline.mode=false
 override.workspace.settings=true
